# VideoGenerator

./: README.md  pyproject.toml
config/: settings.py  urls.py
generator/: admin.py  models.py  urls.py  views.py
generator/migrations/: 0001_initial.py
generator/templates/generator/: base.html
users/: admin.py  models.py  urls.py
users/fixtures/: users.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
